@startuml NodeFM Plugin Class Diagram

!define LIGHTORANGE #FFE5CC
!define LIGHTBLUE #E1F5FF
!define LIGHTGREEN #E8F5E9
!define LIGHTPURPLE #F3E5F5

skinparam class {
    BackgroundColor LIGHTORANGE
    ArrowColor #555555
    BorderColor #999999
}

package "JUCE Framework" {
    abstract class AudioProcessor {
    }
    
    abstract class AudioProcessorEditor {
    }
    
    class WebBrowserComponent {
    }
}

package "Plugin Core"  {
    class AudioPluginAudioProcessor {
        - synth : Synth
        --
        + prepareToPlay(sampleRate, samplesPerBlock)
        + processBlock(buffer, midiMessages)
        + addNode(nodeType, data) : NodeID
        + addConnection(sourceId, destId, amount)
        + updateNodeParameter(nodeId, paramName, value)
        + updateConnectionAmount(sourceId, destId, amount)
        + clearGraph() : NodeID
        + getOutputNodeID() : NodeID
        --
        - splitBufferByEvents(buffer, midiMessages)
        - handleMIDI(data0, data1, data2)
        - render(buffer, sampleCount, bufferOffset)
    }
    
    class AudioPluginAudioProcessorEditor {
        - processorRef : AudioPluginAudioProcessor&
        - webView : WebBrowserComponent
        --
        + sendMessageToJS(eventType, data)
        --
        - handleMessageFromJS(message)
        - getResource(url) : Resource
    }
}

package "Audio Engine"  {
    class Synth {
        - sampleRate : float
        - voice : Voice
        --
        + allocateResources(sampleRate, samplesPerBlock)
        + deAllocateResources()
        + reset()
        + render(outputBuffers, sampleCount)
        + midiMessage(data0, data1, data2)
        + addNodeToGraph(nodeType, data) : NodeID
        + addConnection(sourceId, destId, amount)
        + updateNodeParameter(nodeId, paramName, value)
        + updateConnectionAmount(sourceId, destId, amount)
        + clearGraph() : NodeID
        + getOutputNodeID() : NodeID
        --
        - noteOn(note, velocity)
        - noteOff(note)
    }
    
    class Voice {
        + note : int
        + graph : shared_ptr<DSPGraph>
        + sampleRate : float
        + outputNodeID : NodeID
        --
        + reset()
        + setSampleRate(sr)
        + setNoteFrequency(freq)
        + noteOn()
        + noteOff()
        + isEnvelopeActive() : bool
        + render(outputBuffer, numSamples)
    }
}

package "DSP Graph System"  {
    class DSPGraph {
        - nodes : map<NodeID, unique_ptr<DSPNode>>
        - connections : vector<Connection>
        - nextNodeID : NodeID
        - nextConnectionID : ConnectionID
        - outputNodeID : NodeID
        - processingOrder : vector<NodeID>
        --
        + addNode(node) : NodeID
        + removeNode(id)
        + addConnection(source, dest, amount) : ConnectionID
        + removeConnection(id)
        + updateConnection(source, dest, newAmount)
        + getNode(id) : DSPNode*
        + process(outputBuffer, numSamples)
        + setOutputNode(id)
        + setSampleRate(sr)
        + setNoteFrequency(freq)
        + noteOn()
        + noteOff()
        + isAnyEnvelopeActive() : bool
        + reset()
        + clearGraph()
        --
        - updateProcessingOrder()
    }
    
    abstract class DSPNode {
        + nodeId : NodeID
        # outputBuffer : AudioBuffer<float>
        # modulationInput : float
        --
        + {abstract} process(numSamples)
        + {abstract} reset()
        + getOutput() : float*
        + resetModulation()
        + addModulation(value)
        + setModulation(value)
    }
    
    class Oscillator {
        + amplitude : float
        + frequencyRatio : float
        + baseFrequency : float
        + phase : float
        + envelope : ADSR
        - inc : float
        - sampleRate : float
        --
        + setFrequency(freq)
        + setFrequencyRatio(ratio)
        + setSampleRate(sr)
        + setAmplitude(amp)
        + noteOn()
        + noteOff()
        + setAttack(seconds)
        + setDecay(seconds)
        + setSustain(level)
        + setRelease(seconds)
        + process(numSamples)
        + reset()
        --
        - updateIncrement()
        - nextSample() : float
    }
    
    class Output {
        --
        + process(numSamples)
        + reset()
    }
    
    class Connection {
        + id : ConnectionID
        + source : NodeID
        + destination : NodeID
        + ammount : float
    }
    
    class ADSR {
        - attack : float
        - decay : float
        - sustain : float
        - release : float
        - sampleRate : float
        - stage : EnvelopeStage
        - currentLevel : float
        - multiplier : float
        --
        + setSampleRate(sr)
        + setAttack(seconds)
        + setDecay(seconds)
        + setSustain(level)
        + setRelease(seconds)
        + noteOn()
        + noteOff()
        + reset()
        + nextSample() : float
        + isActive() : bool
        + getStage() : EnvelopeStage
        --
        - calculateMultiplier()
    }
    
    enum EnvelopeStage {
        Idle
        Attack
        Decay
        Sustain
        Release
    }
}

package "Types" {
    class GraphTypes <<typedef>> {
        NodeID : uint32_t
        ConnectionID : uint32_t
    }
}

' Inheritance relationships
AudioProcessor <|-- AudioPluginAudioProcessor
AudioProcessorEditor <|-- AudioPluginAudioProcessorEditor
DSPNode <|-- Oscillator
DSPNode <|-- Output

' Composition relationships
AudioPluginAudioProcessor *-- Synth
AudioPluginAudioProcessorEditor *-- WebBrowserComponent
AudioPluginAudioProcessorEditor o-- AudioPluginAudioProcessor : references

Synth *-- Voice
Voice *-- DSPGraph

DSPGraph *-- "0..*" DSPNode : nodes
DSPGraph *-- "0..*" Connection : connections

Oscillator *-- ADSR : envelope
ADSR -- EnvelopeStage : uses

' Dependencies
AudioPluginAudioProcessorEditor ..> Synth : communicates via
DSPGraph ..> Oscillator : creates
DSPGraph ..> Output : creates
Voice ..> Output : creates default

note right of DSPGraph
  Uses Kahn's algorithm for 
  topological sorting to determine
  processing order
end note

note right of Oscillator
  Implements FM synthesis with
  phase modulation and ADSR envelope
end note

note bottom of AudioPluginAudioProcessorEditor
  Hosts web UI using JUCE WebBrowserComponent
  Handles bidirectional communication between
  JavaScript UI and C++ backend
end note

note top of Voice
  Each voice has its own DSP graph
  allowing independent synthesis chains
end note

@enduml
